sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 14
	INSERT  shift 15
	UPDATE  shift 16
	DELETE  shift 17
	SET  shift 18
	CREATE  shift 19
	ALTER  shift 20
	DROP  shift 22
	RENAME  shift 21
	ANALYZE  shift 23
	SHOW  shift 24
	DESCRIBE  shift 25
	EXPLAIN  shift 26
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	analyze_statement  goto 12
	other_statement  goto 13

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 150)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 28
	MINUS  shift 29
	EXCEPT  shift 30
	INTERSECT  shift 31
	.  reduce 2 (src line 156)

	union_op  goto 27

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 161)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 162)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 163)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 164)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 165)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 166)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 167)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 168)


state 12
	command:  analyze_statement.    (11)

	.  reduce 11 (src line 169)


state 13
	command:  other_statement.    (12)

	.  reduce 12 (src line 170)


state 14
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list from_expression_list_opt where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$34: .    (34)

	.  reduce 34 (src line 287)

	comment_opt  goto 32
	$$34  goto 33

state 15
	insert_statement:  INSERT.comment_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$34: .    (34)

	.  reduce 34 (src line 287)

	comment_opt  goto 34
	$$34  goto 33

state 16
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$34: .    (34)

	.  reduce 34 (src line 287)

	comment_opt  goto 35
	$$34  goto 33

state 17
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$34: .    (34)

	.  reduce 34 (src line 287)

	comment_opt  goto 36
	$$34  goto 33

state 18
	set_statement:  SET.comment_opt update_list 
	$$34: .    (34)

	.  reduce 34 (src line 287)

	comment_opt  goto 37
	$$34  goto 33

state 19
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (199)

	TABLE  shift 38
	VIEW  shift 40
	UNIQUE  shift 41
	.  reduce 199 (src line 1027)

	constraint_opt  goto 39

state 20
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (190)

	VIEW  shift 43
	IGNORE  shift 44
	.  reduce 190 (src line 1005)

	ignore_opt  goto 42

state 21
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 45
	.  error


state 22
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 46
	INDEX  shift 47
	VIEW  shift 48
	.  error


state 23
	analyze_statement:  ANALYZE.TABLE ID 

	TABLE  shift 49
	.  error


state 24
	other_statement:  SHOW.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 50

state 25
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 51

state 26
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 52

state 27
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 14
	.  error

	select_statement  goto 53

state 28
	union_op:  UNION.    (38)
	union_op:  UNION.ALL 

	ALL  shift 54
	.  reduce 38 (src line 306)


state 29
	union_op:  MINUS.    (40)

	.  reduce 40 (src line 315)


state 30
	union_op:  EXCEPT.    (41)

	.  reduce 41 (src line 319)


state 31
	union_op:  INTERSECT.    (42)

	.  reduce 42 (src line 323)


state 32
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list from_expression_list_opt where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (43)

	DISTINCT  shift 56
	.  reduce 43 (src line 328)

	distinct_opt  goto 55

state 33
	comment_opt:  $$34.comment_list 
	comment_list: .    (36)

	.  reduce 36 (src line 297)

	comment_list  goto 57

state 34
	insert_statement:  INSERT comment_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 58
	.  error


state 35
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 59

state 36
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 61
	.  error


state 37
	set_statement:  SET comment_opt.update_list 

	ID  shift 66
	.  error

	column_name  goto 64
	update_list  goto 62
	update_expression  goto 63
	sql_id  goto 65

state 38
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (188)

	IF  shift 68
	.  reduce 188 (src line 1000)

	not_exists_opt  goto 67

state 39
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 69
	.  error


state 40
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 70

state 41
	constraint_opt:  UNIQUE.    (200)

	.  reduce 200 (src line 1029)


state 42
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 72
	.  error


state 43
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 73

state 44
	ignore_opt:  IGNORE.    (191)

	.  reduce 191 (src line 1007)


state 45
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 74
	.  error


state 46
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (186)

	IF  shift 76
	.  reduce 186 (src line 995)

	exists_opt  goto 75

state 47
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 71
	.  error

	sql_id  goto 77

state 48
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (186)

	IF  shift 76
	.  reduce 186 (src line 995)

	exists_opt  goto 78

state 49
	analyze_statement:  ANALYZE TABLE.ID 

	ID  shift 79
	.  error


state 50
	other_statement:  SHOW force_eof.    (31)

	.  reduce 31 (src line 273)


state 51
	other_statement:  DESCRIBE force_eof.    (32)

	.  reduce 32 (src line 278)


state 52
	other_statement:  EXPLAIN force_eof.    (33)

	.  reduce 33 (src line 282)


state 53
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (14)

	.  reduce 14 (src line 177)

	union_op  goto 27

state 54
	union_op:  UNION ALL.    (39)

	.  reduce 39 (src line 311)


state 55
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list from_expression_list_opt where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 84
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	'*'  shift 82
	CASE  shift 109
	IF  shift 107
	.  error

	select_expression_list  goto 80
	select_expression  goto 81
	expression  goto 83
	boolean_expression  goto 85
	condition  goto 87
	value  goto 90
	value_expression  goto 86
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 56
	distinct_opt:  DISTINCT.    (44)

	.  reduce 44 (src line 332)


state 57
	comment_opt:  $$34 comment_list.    (35)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 110
	.  reduce 35 (src line 291)


state 58
	insert_statement:  INSERT comment_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 111

state 59
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 112
	.  error


state 60
	dml_table_expression:  ID.    (76)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 113
	.  reduce 76 (src line 477)


state 61
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 114

state 62
	set_statement:  SET comment_opt update_list.    (19)
	update_list:  update_list.',' update_expression 

	','  shift 115
	.  reduce 19 (src line 210)


state 63
	update_list:  update_expression.    (183)

	.  reduce 183 (src line 979)


state 64
	update_expression:  column_name.'=' value_expression 

	'='  shift 116
	.  error


state 65
	column_name:  sql_id.    (147)

	.  reduce 147 (src line 803)


state 66
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (203)

	'.'  shift 117
	.  reduce 203 (src line 1037)


state 67
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 118
	.  error


state 68
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 119
	.  error


state 69
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 71
	.  error

	sql_id  goto 120

state 70
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 121

state 71
	sql_id:  ID.    (203)

	.  reduce 203 (src line 1037)


state 72
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 122
	.  error


state 73
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 123

state 74
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 124
	.  error


state 75
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 125
	.  error


state 76
	exists_opt:  IF.EXISTS 

	EXISTS  shift 126
	.  error


state 77
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 127
	.  error


state 78
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 128

state 79
	analyze_statement:  ANALYZE TABLE ID.    (30)

	.  reduce 30 (src line 267)


state 80
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.from_expression_list_opt where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 
	from_expression_list_opt: .    (84)

	FROM  shift 131
	','  shift 130
	.  reduce 84 (src line 514)

	from_expression_list_opt  goto 129

state 81
	select_expression_list:  select_expression.    (45)

	.  reduce 45 (src line 337)


state 82
	select_expression:  '*'.    (47)

	.  reduce 47 (src line 347)


state 83
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (52)

	AS  shift 134
	ID  shift 71
	.  reduce 52 (src line 371)

	as_lower_opt  goto 132
	sql_id  goto 133

state 84
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (203)

	'.'  shift 135
	.  reduce 203 (src line 1037)


state 85
	expression:  boolean_expression.    (50)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 137
	AND  shift 136
	.  reduce 50 (src line 361)


state 86
	expression:  value_expression.    (51)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN col_tuple 
	condition:  value_expression.NOT IN col_tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	IN  shift 139
	IS  shift 143
	LIKE  shift 141
	BETWEEN  shift 142
	LE  shift 155
	GE  shift 156
	NE  shift 157
	NULL_SAFE_EQUAL  shift 158
	'='  shift 152
	'<'  shift 153
	'>'  shift 154
	NOT  shift 140
	'&'  shift 144
	'|'  shift 145
	'^'  shift 146
	'+'  shift 147
	'-'  shift 148
	'*'  shift 149
	'/'  shift 150
	'%'  shift 151
	.  reduce 51 (src line 366)

	compare  goto 138

state 87
	boolean_expression:  condition.    (88)

	.  reduce 88 (src line 533)


state 88
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	boolean_expression  goto 159
	condition  goto 87
	value  goto 90
	value_expression  goto 160
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 89
	boolean_expression:  '('.boolean_expression ')' 
	subquery:  '('.select_statement ')' 
	row_tuple:  '('.value_expression_list ')' 

	SELECT  shift 14
	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	select_statement  goto 162
	boolean_expression  goto 161
	condition  goto 87
	value  goto 90
	value_expression  goto 164
	value_expression_list  goto 163
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 90
	value_expression:  value.    (117)

	.  reduce 117 (src line 658)


state 91
	value_expression:  column_name.    (118)

	.  reduce 118 (src line 663)


state 92
	value_expression:  row_tuple.    (119)

	.  reduce 119 (src line 667)


state 93
	value_expression:  unary_operator.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 165
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 94
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (147)

	'('  shift 167
	.  reduce 147 (src line 803)


state 95
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 168
	.  error


state 96
	value_expression:  case_expression.    (133)

	.  reduce 133 (src line 734)


state 97
	condition:  EXISTS.subquery 

	'('  shift 170
	.  error

	subquery  goto 169

state 98
	condition:  KEYRANGE.'(' value ',' value ')' 

	'('  shift 171
	.  error


state 99
	value:  STRING.    (149)

	.  reduce 149 (src line 813)


state 100
	value:  NUMBER.    (150)

	.  reduce 150 (src line 818)


state 101
	value:  VALUE_ARG.    (151)

	.  reduce 151 (src line 822)


state 102
	value:  NULL.    (152)

	.  reduce 152 (src line 826)


state 103
	row_tuple:  subquery.    (182)

	.  reduce 182 (src line 974)


state 104
	unary_operator:  '+'.    (136)

	.  reduce 136 (src line 749)


state 105
	unary_operator:  '-'.    (137)

	.  reduce 137 (src line 754)


state 106
	unary_operator:  '~'.    (138)

	.  reduce 138 (src line 758)


state 107
	keyword_as_func:  IF.    (134)

	.  reduce 134 (src line 739)


state 108
	keyword_as_func:  VALUES.    (135)

	.  reduce 135 (src line 744)


state 109
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (140)

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  reduce 140 (src line 769)

	value  goto 90
	value_expression  goto 173
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	value_expression_opt  goto 172
	sql_id  goto 94

state 110
	comment_list:  comment_list COMMENT.    (37)

	.  reduce 37 (src line 301)


state 111
	insert_statement:  INSERT comment_opt INTO dml_table_expression.column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO dml_table_expression.SET update_list on_dup_opt 
	column_list_opt: .    (171)

	SET  shift 175
	'('  shift 176
	.  reduce 171 (src line 921)

	column_list_opt  goto 174

state 112
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 66
	.  error

	column_name  goto 64
	update_list  goto 177
	update_expression  goto 63
	sql_id  goto 65

state 113
	dml_table_expression:  ID '.'.ID 

	ID  shift 178
	.  error


state 114
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (86)

	WHERE  shift 180
	.  reduce 86 (src line 524)

	where_expression_opt  goto 179

state 115
	update_list:  update_list ','.update_expression 

	ID  shift 66
	.  error

	column_name  goto 64
	update_expression  goto 181
	sql_id  goto 65

state 116
	update_expression:  column_name '='.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 182
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 117
	column_name:  ID '.'.sql_id 

	ID  shift 71
	.  error

	sql_id  goto 183

state 118
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 184

state 119
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 185
	.  error


state 120
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (201)

	USING  shift 187
	.  reduce 201 (src line 1032)

	using_opt  goto 186

state 121
	create_statement:  CREATE VIEW sql_id force_eof.    (22)

	.  reduce 22 (src line 226)


state 122
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 193
	DEFAULT  shift 191
	ID  shift 194
	ALTER  shift 190
	DROP  shift 192
	RENAME  shift 189
	.  error

	non_rename_operation  goto 188

state 123
	alter_statement:  ALTER VIEW sql_id force_eof.    (25)

	.  reduce 25 (src line 241)


state 124
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 195
	.  error


state 125
	drop_statement:  DROP TABLE exists_opt ID.    (27)

	.  reduce 27 (src line 252)


state 126
	exists_opt:  IF EXISTS.    (187)

	.  reduce 187 (src line 997)


state 127
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 196
	.  error


state 128
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (204)

	.  reduce 204 (src line 1043)

	force_eof  goto 197

state 129
	select_statement:  SELECT comment_opt distinct_opt select_expression_list from_expression_list_opt.where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	where_expression_opt: .    (86)

	WHERE  shift 180
	.  reduce 86 (src line 524)

	where_expression_opt  goto 198

state 130
	select_expression_list:  select_expression_list ','.select_expression 

	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 84
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	'*'  shift 82
	CASE  shift 109
	IF  shift 107
	.  error

	select_expression  goto 199
	expression  goto 83
	boolean_expression  goto 85
	condition  goto 87
	value  goto 90
	value_expression  goto 86
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 131
	from_expression_list_opt:  FROM.table_expression_list 

	ID  shift 204
	'('  shift 203
	.  error

	table_expression_list  goto 200
	table_expression  goto 201
	simple_table_expression  goto 202
	subquery  goto 205

state 132
	select_expression:  expression as_lower_opt.    (48)

	.  reduce 48 (src line 352)


state 133
	as_lower_opt:  sql_id.    (53)

	.  reduce 53 (src line 375)


state 134
	as_lower_opt:  AS.sql_id 

	ID  shift 71
	.  error

	sql_id  goto 206

state 135
	select_expression:  ID '.'.'*' 
	column_name:  ID '.'.sql_id 

	ID  shift 71
	'*'  shift 207
	.  error

	sql_id  goto 183

state 136
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	boolean_expression  goto 208
	condition  goto 87
	value  goto 90
	value_expression  goto 160
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 137
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 97
	NULL  shift 102
	VALUES  shift 108
	KEYRANGE  shift 98
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 89
	'~'  shift 106
	NOT  shift 88
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	boolean_expression  goto 209
	condition  goto 87
	value  goto 90
	value_expression  goto 160
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 138
	condition:  value_expression compare.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 210
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 139
	condition:  value_expression IN.col_tuple 

	LIST_ARG  shift 214
	'('  shift 212
	.  error

	col_tuple  goto 211
	subquery  goto 213

state 140
	condition:  value_expression NOT.IN col_tuple 
	condition:  value_expression NOT.LIKE value_expression 
	condition:  value_expression NOT.BETWEEN value_expression AND value_expression 

	IN  shift 215
	LIKE  shift 216
	BETWEEN  shift 217
	.  error


state 141
	condition:  value_expression LIKE.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 218
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 142
	condition:  value_expression BETWEEN.value_expression AND value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 219
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 143
	condition:  value_expression IS.NULL 
	condition:  value_expression IS.NOT NULL 

	NULL  shift 220
	NOT  shift 221
	.  error


state 144
	value_expression:  value_expression '&'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 222
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 145
	value_expression:  value_expression '|'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 223
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 146
	value_expression:  value_expression '^'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 224
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 147
	value_expression:  value_expression '+'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 225
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 148
	value_expression:  value_expression '-'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 226
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 149
	value_expression:  value_expression '*'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 227
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 150
	value_expression:  value_expression '/'.value_expression 

	NULL  shift 102
	VALUES  shift 108
	ID  shift 66
	STRING  shift 99
	NUMBER  shift 100
	VALUE_ARG  shift 101
	'('  shift 166
	'~'  shift 106
	'+'  shift 104
	'-'  shift 105
	CASE  shift 109
	IF  shift 107
	.  error

	value  goto 90
	value_expression  goto 228
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 103
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94
